Fix path for resources

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               <div class="text-wrap text-wrap--half">
                 <div>
                   <div class="logo-ikea mb-5 mb-md-7">
-                    <img src="public/img/logos/ikea-logo.svg" alt="Ikea" />
+                    <img src="ikea/public/img/logos/ikea-logo.svg" alt="Ikea" />
                   </div>
                   <div class="headline-wrap">
                     <div class="headline headline--1">
@@ -160,19 +160,19 @@
                         <ul class="platforms">
                           <li>
                             <div class="platform platform--sm">
-                              <img src="public/img/platforms/icon-ai.svg" alt="" />
+                              <img src="ikea/public/img/platforms/icon-ai.svg" alt="" />
                               <span>AI Platforms</span>
                             </div>
                           </li>
                           <li>
                             <div class="platform">
-                              <img src="public/img/platforms/icon-kubernetes.svg" alt="" />
+                              <img src="ikea/public/img/platforms/icon-kubernetes.svg" alt="" />
                               <span>Kubernetes Engine</span>
                             </div>
                           </li>
                           <li>
                             <div class="platform">
-                              <img src="public/img/platforms/icon-machine-learning.svg" alt="" />
+                              <img src="ikea/public/img/platforms/icon-machine-learning.svg" alt="" />
                               <span>Machine Learning</span>
                             </div>
                           </li>
@@ -184,7 +184,7 @@
                           <button id="slideButton" class="pulsar-btn animate" aria-label="Drag button to explore now"><!-- data-slug="stages.intro.0" -->
                             <span class="pulsar-btn__container">
                               <span class="pulsar-btn__bg">
-                                <img src="public/img/ui/arrow-right.svg" alt="" />
+                                <img src="ikea/public/img/ui/arrow-right.svg" alt="" />
                               </span>
                             </span>
                           </button>
@@ -266,7 +266,7 @@
                       <button class="pulsar-btn pulsar-btn--geomagical" aria-labelledby="works-label" data-slug="stages.geomagical.1">
                         <span class="pulsar-btn__container">
                           <span class="pulsar-btn__bg">
-                            <img src="public/img/ui/arrow-right.svg" alt="" />
+                            <img src="ikea/public/img/ui/arrow-right.svg" alt="" />
                           </span>
                         </span>
                         <span id="works-label" class="pulsar-btn__label">See how it works</span>
@@ -312,7 +312,7 @@
                       <div class="card card-animation card--geomagical">
                         <div class="card__header">
                           <div class="card__step card__step--capture mb-2">
-                            <img src="public/img/geomagical/capture.svg" alt="" />
+                            <img src="ikea/public/img/geomagical/capture.svg" alt="" />
                             <span>Step 1</span>
                           </div>
                           <div class="card__title">How it works:<br>Scene capture</div>
@@ -390,7 +390,7 @@
                       <div class="card card-animation card--geomagical">
                         <div class="card__header">
                           <div class="card__step mb-2">
-                            <img src="public/img/geomagical/360.svg" alt="" />
+                            <img src="ikea/public/img/geomagical/360.svg" alt="" />
                             <span>Step 2</span>
                           </div>
                           <div class="card__title">How it works:<br>3D models</div>
@@ -454,7 +454,7 @@
                       <div class="card card-animation card--geomagical">
                         <div class="card__header">
                           <div class="card__step mb-2">
-                            <img src="public/img/geomagical/design.svg" alt="" />
+                            <img src="ikea/public/img/geomagical/design.svg" alt="" />
                             <span>Step 3</span>
                           </div>
                           <div class="card__title">How it works:<br>Designing the space</div>
@@ -523,7 +523,7 @@
                       <button class="pulsar-btn pulsar-btn--recommendations" aria-labelledby="works-label2" data-slug="stages.recommendations.1">
                         <span class="pulsar-btn__container">
                           <span class="pulsar-btn__bg">
-                            <img src="public/img/ui/arrow-right.svg" alt="" />
+                            <img src="ikea/public/img/ui/arrow-right.svg" alt="" />
                           </span>
                         </span>
                         <span id="works-label2" class="pulsar-btn__label">How it works</span>
@@ -539,7 +539,7 @@
                       <div class="card card-animation card--recommendations">
                         <div class="card__header">
                           <div class="card__step mb-2">
-                            <img src="public/img/platforms/icon-recommendations.svg" alt="" />
+                            <img src="ikea/public/img/platforms/icon-recommendations.svg" alt="" />
                           </div>
                           <div class="card__title">Recommendations AI</div>
                         </div>
@@ -577,7 +577,7 @@
                       <div class="card card-animation card--recommendations">
                         <div class="card__header">
                           <div class="card__step mb-2">
-                            <img src="public/img/platforms/icon-recommendations.svg" alt="" />
+                            <img src="ikea/public/img/platforms/icon-recommendations.svg" alt="" />
                           </div>
                           <div class="card__title">Recommendations AI</div>
                         </div>
@@ -607,7 +607,7 @@
                       <div class="card card-animation card--recommendations">
                         <div class="card__header">
                           <div class="card__step mb-2">
-                            <img src="public/img/platforms/icon-vps.svg" alt="" />
+                            <img src="ikea/public/img/platforms/icon-vps.svg" alt="" />
                           </div>
                           <div class="card__title">Vision API Product Search</div>
                         </div>
@@ -655,7 +655,7 @@
                       <button class="pulsar-btn pulsar-btn--recap" data-slug="stages.recap.1"><!-- aria-labelledby="works-label3" -->
                         <span class="pulsar-btn__container">
                           <span class="pulsar-btn__bg">
-                            <img src="public/img/ui/arrow-right.svg" alt="" />
+                            <img src="ikea/public/img/ui/arrow-right.svg" alt="" />
                           </span>
                         </span>
                         <!-- <span id="works-label3" class="pulsar-btn__label">How it works</span> -->
@@ -701,7 +701,7 @@
             <!-- Navigation Desktop -->
             <div id="stageNavigation" class="navigation">
               <span id="scrollText" class="scroll"><!-- add/remove class active -->
-                <img src="public/img/ui/scroll.svg" alt="" />
+                <img src="ikea/public/img/ui/scroll.svg" alt="" />
                 <span>USE RIGHT ARROW OR SCROLL TO MOVE FORWARD</span>
               </span>
               <div class="stage-nav-container">
@@ -793,7 +793,7 @@
                   <button class="pulsar-btn pulsar-btn--geomagical" aria-labelledby="works-label-mobile" id="geomagicalBtn">
                     <span class="pulsar-btn__container">
                       <span class="pulsar-btn__bg">
-                        <img src="public/img/ui/arrow-right.svg" alt="" />
+                        <img src="ikea/public/img/ui/arrow-right.svg" alt="" />
                       </span>
                     </span>
                     <span id="works-label-mobile" class="pulsar-btn__label">See how it works</span>
@@ -832,7 +832,7 @@
                               Line detection
                             </h3>
                             <div class="tech__image">
-                              <img src="public/img/mobile/stages/geomagical_step1-2-min.jpg" alt="" />
+                              <img src="ikea/public/img/mobile/stages/geomagical_step1-2-min.jpg" alt="" />
                             </div>
                             <p>Finding lines is critical to understanding the shape and contents of indoor spaces. IKEA combines neural networks and computer vision techniques to locate and label key lines in the scene in both 2D and 3D.</p>
                           </div>
@@ -843,7 +843,7 @@
                               Parallax tolerant algorithm
                             </h3>
                             <div class="tech__image">
-                              <img src="public/img/mobile/stages/geomagical_step1-3-min.jpg" alt="" />
+                              <img src="ikea/public/img/mobile/stages/geomagical_step1-3-min.jpg" alt="" />
                             </div>
                             <p>This app uses neural networks, photogrammetry, and world-class stitching algorithms to combine photos into a seamless, beautiful panorama.</p>
                           </div>
@@ -856,7 +856,7 @@
                     <div class="step-card step-card--geomagical">
                       <div class="step-card__header">
                         <div class="step-card__step mb-2">
-                          <!-- <img src="public/img/geomagical/360.svg" alt="" /> -->
+                          <!-- <img src="ikea/public/img/geomagical/360.svg" alt="" /> -->
                           <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24px" height="24px" viewBox="0 0 24 24">
                             <g>
                               <path class="step-icon icon-360" d="M12,6C6.5,6,2,8.2,2,11c0,2.2,2.9,4.1,7,4.8V19l4-4l-4-4v2.7c-3.2-0.6-5-1.9-5-2.7
@@ -878,7 +878,7 @@
                               Depth estimation
                             </h3>
                             <div class="tech__image">
-                              <img src="public/img/mobile/stages/geomagical_step2-1-min.jpg" alt="" />
+                              <img src="ikea/public/img/mobile/stages/geomagical_step2-1-min.jpg" alt="" />
                             </div>
                             <p>The app combines photogrammetry and multiple neural networks to recreate the full detailed 3D structure of the room and its contents, achieving world-class accuracy.</p>
                           </div>
@@ -889,7 +889,7 @@
                               Segmentation
                             </h3>
                             <div class="tech__image">
-                              <img src="public/img/mobile/stages/geomagical_step2-2-min.jpg" alt="" />
+                              <img src="ikea/public/img/mobile/stages/geomagical_step2-2-min.jpg" alt="" />
                             </div>
                             <p>Neural networks and computer vision techniques enable the software to understand what's in the room, classifying every visible object and creating a semantic model for every single detection within it.</p>
                           </div>
@@ -901,7 +901,7 @@
                     <div class="step-card step-card--geomagical">
                       <div class="step-card__header">
                         <div class="step-card__step mb-2">
-                          <!-- <img src="public/img/geomagical/design.svg" alt="" /> -->
+                          <!-- <img src="ikea/public/img/geomagical/design.svg" alt="" /> -->
                           <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24px" height="24px" viewBox="0 0 24 24">
                             <path class="step-icon icon-design" d="M20.8,7.4c0.4-0.4,0.4-1,0-1.4L18,3.2c-0.4-0.4-1-0.4-1.4,0l-4.5,4.5L8.2,3.8
                         C7.4,3,6.2,3,5.4,3.8L3.5,5.7c-0.8,0.8-0.8,2.1,0,2.8l3.9,3.9l-4.5,4.5v4.2h4.2l4.5-4.5l3.9,3.9c0.9,1,2.2,0.6,2.8,0l1.9-1.9
@@ -924,7 +924,7 @@
                               Realistic rendering and light source estimation
                             </h3>
                             <div class="tech__image">
-                              <img src="public/img/mobile/stages/geomagical_step3-1-min.jpg" alt="" />
+                              <img src="ikea/public/img/mobile/stages/geomagical_step3-1-min.jpg" alt="" />
                             </div>
                             <p>IKEA models are rendered into the room with realistic-looking shadows, illumination, scale, and occlusions.</p>
                             <p>The software combines classic computer vision algorithms and deep learning techniques to accurately detect light sources in the room.  This enables the technology to render reflections, shadows, and a realistic appearance of the virtual furniture. </p>
@@ -961,7 +961,7 @@
                   <button class="pulsar-btn pulsar-btn--recommendations" aria-labelledby="works-label-mobile-2" id="recomendationsMobile">
                     <span class="pulsar-btn__container">
                       <span class="pulsar-btn__bg">
-                        <img src="public/img/ui/arrow-right.svg" alt="" />
+                        <img src="ikea/public/img/ui/arrow-right.svg" alt="" />
                       </span>
                     </span>
                     <span id="works-label-mobile-2" class="pulsar-btn__label">How it works</span>
@@ -981,7 +981,7 @@
                     <!-- Step 1 -->
                     <div class="step-card step-card--recommendations">
                       <div class="step-card__header">
-                        <img src="public/img/platforms/icon-recommendations-white.svg" alt="" />
+                        <img src="ikea/public/img/platforms/icon-recommendations-white.svg" alt="" />
                         <h2 class="step-card__title mt-2">Recommendations AI</h2>
                       </div>
                       <div class="step-card__body">
@@ -1028,7 +1028,7 @@
                   <button class="pulsar-btn pulsar-btn--recap" id="recapMobile"><!-- aria-labelledby="works-label-mobile-3" -->
                     <span class="pulsar-btn__container">
                       <span class="pulsar-btn__bg">
-                        <img src="public/img/ui/arrow-right.svg" alt="" />
+                        <img src="ikea/public/img/ui/arrow-right.svg" alt="" />
                       </span>
                     </span>
                     <!-- <span id="works-label-mobile-3" class="pulsar-btn__label">How it works</span> -->
@@ -1061,7 +1061,7 @@
           </section>
           <!-- end Section Stages Mobile -->
 
-          <span id="mobileHouse" class="mobile-house fade"><img src="public/img/mobile/start.png" alt="" /></span>
+          <span id="mobileHouse" class="mobile-house fade"><img src="ikea/public/img/mobile/start.png" alt="" /></span>
 
           <a href="https://policies.google.com/privacy?hl=en" target="_blank" class="privacy">Privacy</a>
         </div>
@@ -1073,19 +1073,19 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
-    <script src="src/js/helper.js"></script>
-    <script src="src/js/utils/utils.js"></script>
-    <script src="src/js/canvasengine/graphic.js"></script>
-    <script src="src/js/canvasengine/canvas.js"></script>
-    <script src="src/js/data/animation.js"></script>
-    <script src="src/js/background.js"></script>
+    <script src="ikea/src/js/helper.js"></script>
+    <script src="ikea/src/js/utils/utils.js"></script>
+    <script src="ikea/src/js/canvasengine/graphic.js"></script>
+    <script src="ikea/src/js/canvasengine/canvas.js"></script>
+    <script src="ikea/src/js/data/animation.js"></script>
+    <script src="ikea/src/js/background.js"></script>
 
-    <script src="src/js/addons/uiaddons.js"></script>
-    <script src="src/js/addons/share.js"></script>
-    <script src="src/js/callbacks.js"></script>
+    <script src="ikea/src/js/addons/uiaddons.js"></script>
+    <script src="ikea/src/js/addons/share.js"></script>
+    <script src="ikea/src/js/callbacks.js"></script>
 
-    <script src="src/js/helper.js"></script>
-    <script src="src/js/app.js"></script>
+    <script src="ikea/src/js/helper.js"></script>
+    <script src="ikea/src/js/app.js"></script>
 
   </body>
 </html>
