Moved jquery to local filesystem and url route solving

--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@
       <!-- <div id='animnames'style="display:block;margin:5px;padding:3px"></div> -->
       <div id='renders'style="display:block;margin:5px;padding:3px;font-size:xx-small"></div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="/ikea/public/js/lib/jquery/jquery-3.5.1.min.js"></script>
 
     <script src="/ikea/src/js/helper.js"></script>
     <script src="/ikea/src/js/utils/utils.js"></script>
