Fixed link on last screen

--- a/index.html
+++ b/index.html
@@ -1018,7 +1018,7 @@
                           Join us at IKEA
                           <span class="anim"></span>
                         </a>
-                        <button class="btn btn--outline-primary btn-animation">
+                        <button id="shareFinal"  class="btn btn--outline-primary btn-animation">
                           Share
                           <span class="anim"></span>
                         </button>
