Force update on JS and CSS file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="/ikea/public/css/main.css">
+    <link rel="stylesheet" href="/ikea/public/css/main.css?v=1.0.2.201019">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Google+Sans:300,400,500,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -1590,7 +1590,7 @@
       </main>
     </div>
 
-    <script src="/ikea/public/js/site.min.js?v=1.0.1"></script>
+    <script src="/ikea/public/js/site.min.js?v=1.0.2.201019"></script>
 
 
 
