--- a/ikea/index.html
+++ b/ikea/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="/ikea/public/css/main.css?v=1.0.2.201019">
+    <link rel="stylesheet" href="/ikea/public/css/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Google+Sans:300,400,500,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -956,7 +956,7 @@
                     </div>
                     <div class="easteregg">
                       <div class="bubbles fit-canvas "><!-- active -->
-                        <div class="bubble-wrap" style="bottom: 41%; right: 30%;">
+                        <div class="bubble-wrap" style="bottom: 41%; right: 26%;">
                           <div class="bubble-scroll">
                             <!-- #4 -->
                             <div class="bubble bubble--right">
@@ -1014,11 +1014,11 @@
                       <p class="text-animation mb-10">IKEA is a place where anyone can chip in an idea or bring their unique talent or experience to work. We don’t just settle for the way things are so we’re always looking for people who think differently.</p>
 
                       <div class="button-wrap">
-                        <a href="https://en-global-jobs.about.ikea.com/search-jobs/ALL?orgIds=22908&ac=59685&alp=ALL&alt=0&ascf=%5B%7B%22Key%22%3A%22ALL%22%2C%22Value%22%3Anull%7D%5D&=&utm_source=demo&utm_medium=tooltip&utm_campaign=noa_emea&utm_content=IKEA_Careers" class="btn btn--ikea btn-animation" target="_blank" role="button">
+                        <a id="joinUsButton" href="https://en-global-jobs.about.ikea.com/search-jobs/ALL?orgIds=22908&ac=59685&alp=ALL&alt=0&ascf=%5B%7B%22Key%22%3A%22ALL%22%2C%22Value%22%3Anull%7D%5D&=&utm_source=demo&utm_medium=tooltip&utm_campaign=noa_emea&utm_content=IKEA_Careers" class="btn btn--ikea btn-animation" target="_blank" role="button">
                           Join us at IKEA
                           <span class="anim"></span>
                         </a>
-                        <button id="shareFinal"  class="btn btn--outline-primary btn-animation">
+                        <button id="shareFinal" class="btn btn--outline-primary btn-animation">
                           Share
                           <span class="anim"></span>
                         </button>
@@ -1081,7 +1081,7 @@
               </span>
               <div class="stage-nav-container">
                 <div class="stage-nav"><!-- add class current | done -->
-                  <button class="stage-btn stage-nav__point" data-slug="stages.intro.0">
+                  <button class="stage-btn stage-nav__point" data-slug="BACK:stages.intro.0">
                     <span class="stage-nav__label">Introduction</span>
                   </button>
                   <span class="stage-nav__steps">
@@ -1091,7 +1091,7 @@
                   </span>
                 </div>
                 <div class="stage-nav"><!-- add class current | done -->
-                  <button class="stage-btn stage-nav__point" data-slug="stages.geomagical.0">
+                  <button class="stage-btn stage-nav__point" data-slug="BACK:stages.geomagical.0">
                     <span class="stage-nav__label">Customization</span>
                   </button>
                   <span class="stage-nav__steps">
@@ -1103,7 +1103,7 @@
                   </span>
                 </div>
                 <div class="stage-nav"><!-- add class current | done -->
-                  <button class="stage-btn stage-nav__point" data-slug="stages.recommendations0">
+                  <button class="stage-btn stage-nav__point" data-slug="BACK:stages.recommendations.0">
                     <span class="stage-nav__label">AI Recommendations</span>
                   </button>
                   <span class="stage-nav__steps">
@@ -1114,7 +1114,7 @@
                   </span>
                 </div>
                 <div class="stage-nav"><!-- add class current | done -->
-                  <button class="stage-btn stage-nav__point" data-slug="stages.recap.0">
+                  <button class="stage-btn stage-nav__point" data-slug="BACK:stages.recap.0">
                     <span class="stage-nav__label">Recap</span>
                   </button>
                 </div>
@@ -1530,7 +1530,7 @@
                       <div class="step-card__body">
                         <div class="step-card__wrap">
                           <p class="mb-10">IKEA is a place where anyone can chip in an idea or bring their unique talent or experience to work. We don’t just settle for the way things are so we’re always looking for people who think differently.</p>
-                          <a href="https://en-global-jobs.about.ikea.com/search-jobs/ALL?orgIds=22908&ac=59685&alp=ALL&alt=0&ascf=%5B%7B%22Key%22%3A%22ALL%22%2C%22Value%22%3Anull%7D%5D&=&utm_source=demo&utm_medium=tooltip&utm_campaign=noa_emea&utm_content=IKEA_Careers" target="_blank" class="btn btn--block btn--ikea mb-3" role="button">Join us at IKEA</a>
+                          <a href="https://en-global-jobs.about.ikea.com/search-jobs/ALL?orgIds=22908&ac=59685&alp=ALL&alt=0&ascf=%5B%7B%22Key%22%3A%22ALL%22%2C%22Value%22%3Anull%7D%5D&=&utm_source=demo&utm_medium=tooltip&utm_campaign=noa_emea&utm_content=IKEA_Careers" target="_blank" class="btn btn--block btn--ikea mb-3" role="button" >Join us at IKEA</a>
 
                           <div class="products-list mt-10">
                             <p>GOOGLE CLOUD PRODUCTS FEATURED IN THIS DEMO:</p>
