Changed ikea share image and ikea share title

--- a/ikea/index.html
+++ b/ikea/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-    <title>IKEA x Google Cloud</title>
+    <title>IKEA demo on Google Cloud Next OnAir EMEA</title>
       <!-- Social meta tags - Facebook -->
-  	<meta property="og:title" content="IKEA x Google Cloud">
+  	<meta property="og:title" content="IKEA demo on Google Cloud Next OnAir EMEA">
   	<meta property="og:description" content="Learn how IKEA uses Google Cloud to bring the uniqueness of their brand to life digitally, and improve people’s lives at home.">
   	<meta property="og:type" content="website" />
   	<meta property="og:image" content="https://showcase.withgoogle.com/ikea/public/share/share.jpg">
@@ -19,7 +19,7 @@
   	<meta property="og:image:height" content="630" />
   	<meta property="og:url" content="https://showcase.withgoogle.com/ikea">
   	<!-- Meta tags twitter cards - Twitter -->
-  	<meta name="twitter:title" content="IKEA x Google Cloud">
+  	<meta name="twitter:title" content="IKEA demo on Google Cloud Next OnAir EMEA">
   	<meta name="twitter:description" content="Learn how IKEA uses Google Cloud to bring the uniqueness of their brand to life digitally, and improve people’s lives at home.">
   	<meta name="twitter:card" content="">
   	<meta name="twitter:image:src" content="https://showcase.withgoogle.com/ikea/public/share/share.jpg">
