Force cache update for social shares

--- a/ikea/index.html
+++ b/ikea/index.html
@@ -14,15 +14,15 @@
   	<meta property="og:title" content="IKEA demo on Google Cloud Next OnAir EMEA">
   	<meta property="og:description" content="Learn how IKEA uses Google Cloud to bring the uniqueness of their brand to life digitally, and improve people’s lives at home.">
   	<meta property="og:type" content="website" />
-  	<meta property="og:image" content="https://showcase.withgoogle.com/ikea/public/share/share.jpg">
+  	<meta property="og:image" content="https://showcase.withgoogle.com/ikea/public/share/share.jpg?v=1">
   	<meta property="og:image:width" content="1200" />
   	<meta property="og:image:height" content="630" />
-  	<meta property="og:url" content="https://showcase.withgoogle.com/ikea">
+  	<meta property="og:url" content="https://showcase.withgoogle.com/ikea/">
   	<!-- Meta tags twitter cards - Twitter -->
   	<meta name="twitter:title" content="IKEA demo on Google Cloud Next OnAir EMEA">
   	<meta name="twitter:description" content="Learn how IKEA uses Google Cloud to bring the uniqueness of their brand to life digitally, and improve people’s lives at home.">
   	<meta name="twitter:card" content="">
-  	<meta name="twitter:image:src" content="https://showcase.withgoogle.com/ikea/public/share/share.jpg">
+  	<meta name="twitter:image:src" content="https://showcase.withgoogle.com/ikea/public/share/share.jpg?v=1">
 
 
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
