Startover button and googlehome glow

--- a/ikea/index.html
+++ b/ikea/index.html
@@ -251,15 +251,6 @@
 
           <!-- begin Section Stages -->
           <section id="sectionstages" class="section section--stages">
-            <!-- <button id="homeBtn" class="home-btn home-btn--intro" aria-label="Home" data-slug="start">
-              <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="19px" height="16px" viewBox="0 0 19 16" xml:space="preserve" focusable="false">
-                <g>
-                  <path class="icon-home" d="M9.3,0L0,8.4h2.8v7.4h5.6v-5.6h1.9v5.6h5.6V8.4h2.8L9.3,0z M9.3,2.5L14,6.7V14h-1.9V8.4
-                    H6.5V14H4.7V6.7L9.3,2.5L9.3,2.5z"/>
-                </g>
-              </svg>
-            </button> -->
-
             <div class="stages">
               <!-- begin Stage Intro -->
               <div id='stageintro' class="stage stage--intro">
@@ -1004,6 +995,16 @@
                   </div>
                 </div>
                 <div class="step step--1">
+                  <button class="home-btn home-btn--recap" aria-label="Home" data-slug="RESTART">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="19px" height="16px" viewBox="0 0 19 16" xml:space="preserve" focusable="false">
+                      <g>
+                        <path class="icon-home" d="M9.3,0L0,8.4h2.8v7.4h5.6v-5.6h1.9v5.6h5.6V8.4h2.8L9.3,0z M9.3,2.5L14,6.7V14h-1.9V8.4
+                          H6.5V14H4.7V6.7L9.3,2.5L9.3,2.5z"/>
+                      </g>
+                    </svg>
+                    <span>Start over</span>
+                  </button>
+
                   <div class="container-fluid">
                     <div class="text-wrap text-wrap--left">
                       <h3 class="typography typography--headline-2 headline-line-animation mb-4">
